--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,6 @@
 @import './variables.css';
 @import './general.css';
+@import './header.css';
+@import './home.css';
 @import './login.css';
 @import './register.css';
