--- a/site_ViveBio/public/css/styles.css
+++ b/site_ViveBio/public/css/styles.css
@@ -1,4 +1,7 @@
 @import './variables.css';
 @import './general.css';
+@import './home.css';
 @import './login.css';
 @import './register.css';
+@import './carrito.css';
+@import './producto.css';
