--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -8,6 +8,14 @@
     <title>Home</title>
 </head>
 <body class="home">
-    <h1>Home</h1>
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
