--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -8,14 +8,118 @@
     <title>Home</title>
 </head>
 <body class="home">
-    <header>
-
+    <header class="header">
+        <img src="/images/logo.png" alt="logo" class="logo">
+        <img src="/images/menu-hamburgesa.png" alt="" class="menu">
+        <div>
+            <div class="header__busqueda">
+                <input type="text" class="barra">
+                <img src="/images/Cruz.png" alt="" class="barra__cruz">
+                <img src="/images/Lupa.png" alt="" class="barra__lupa">
+            </div>
+            <div class="header__opciones">
+                <ul>
+                    <li><a href=""></a>Home</li>
+                    <li><a href=""></a>Productos</li>
+                    <li><a href=""></a>Quienes somos</li>
+                    <li><a href=""></a>Contacto</li>
+                </ul>
+            </div>
+        </div>
+        
+        <div class="header__user">
+            <button>
+                <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
+                <p>Usuario</p>
+            </button>
+            <p>don't have an account? <a>Register</a></p>
+        </div>
+        <div class="header__iconos">
+            <a href="#"><img src="/images/configuracion.png" alt=""></a>
+            <a href="#"><img src="/images/campana.png" alt=""></a>
+            <a href="#"><img src="/images/carrito.png" alt=""></a>
+            <a href="#"><img src="/images/corazon.png" alt=""></a>
+        </div>
     </header>
+    <div class="carrusel__home">
+    </div>
     <main>
-
+        <div class="subtitulo__home">
+            <h1>Productos En Oferta</h1>
+        </div>
+        <section class="sect1">
+            <article class="art__home">
+                <div class="nombreart__home">
+                    <h1>producto 1</h1>
+                </div>
+                <div class="imgart__home">
+                    <img src="/images/producto1.jpeg" alt="">
+                </div>
+                <div class="verart__home">
+                    <a href="#">Ver mas</a>
+                </div>
+            </article>
+            <article class="art__home">
+                <div class="nombreart__home">
+                    <h1>producto 2</h1>
+                </div>
+                <div class="imgart__home">
+                    <img src="/images/producto2.jpeg" alt="">
+                </div>
+                <div class="verart__home">
+                    <a href="#">Ver mas</a>
+                </div>
+            </article>
+            <article class="art__home">
+                <div class="nombreart__home">
+                    <h1>producto 3</h1>
+                </div>
+                <div class="imgart__home">
+                    <img src="/images/producto3.jpeg" alt="">
+                </div>
+                <div class="verart__home">
+                    <a href="#">Ver mas</a>
+                </div>
+            </article>
+            <article class="vermas__home">
+                <div class='vermas-general'>
+                    <a href="#">Ver mas</a>
+                </div>
+            </article>
+        </section>
+        <section class="sect2">
+            <div class='Categorias__home'>
+                <h1>Categorias</h1>
+            </div>
+            <article>
+                <div class="Corporal__home">
+                </div>
+            </article>
+            <article>
+                <div class="Capilar__home">
+                </div>
+            </article>
+            <article>
+                <div class="spa__home">
+                </div>
+            </article>
+        </section>
     </main>
     <footer>
-
+        <div class="DatFooter__home">
+            <ul class="direcciones__home">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Consejos</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+            <ul class="redes__home">
+                <li><img src="/images/linkedln.png" alt=""></li>
+                <li><img src="/images/twitter.png" alt=""></li>
+                <li><img src="/images/Facebook.png" alt=""></li>
+                <li><img src="/images/Instagram.png" alt=""></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
