--- a/site_ViveBio/public/css/styles.css
+++ b/site_ViveBio/public/css/styles.css
@@ -1,5 +1,6 @@
 @import './variables.css';
 @import './general.css';
+@import './header.css';
 @import './home.css';
 @import './login.css';
 @import './register.css';
