--- a/site_ViveBio/public/css/variables.css
+++ b/site_ViveBio/public/css/variables.css
@@ -3,5 +3,6 @@
     --verdeAmarillento: #D9E66B;
     --VerdeClaro-Opaco: rgba(208, 237, 202, 0.5);
     --GrisClaro: #C4C4C4;
+    --trasparencia: rgba(0,0,0,0);
 }
 
