--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -26,7 +26,6 @@
                     <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
                     <p>Usuario</p>
                 </a>
-                <p>don't have an account? <a>Register</a></p>
             </div>
         </div>
         <nav class="header__nav">
@@ -35,10 +34,10 @@
             </div>
             <div class="header__opciones">
                 <ul>
-                    <li><a href=""></a>Home</li>
-                    <li><a href=""></a>Productos</li>
-                    <li><a href=""></a>Quienes somos</li>
-                    <li><a href=""></a>Contacto</li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Productos</a></li>
+                    <li><a href="">Quienes somos</a></li>
+                    <li><a href="">Contacto</a></li>
                 </ul>
             </div>
             <div class="header__iconos">
