--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -113,20 +113,27 @@
             </article>
         </section>
     </main>
-    <footer>
-        <div class="DatFooter__home">
-            <ul class="direcciones__home">
+    <footer class="footer">
+        <div class="DatFooter">
+            <ul class="direcciones__footer">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Productos</a></li>
                 <li><a href="#">Consejos</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Politica de devolucion</a></li>
             </ul>
-            <ul class="redes__home">
-                <li><img src="/images/linkedln.png" alt=""></li>
-                <li><img src="/images/twitter.png" alt=""></li>
-                <li><img src="/images/Facebook.png" alt=""></li>
-                <li><img src="/images/Instagram.png" alt=""></li>
-            </ul>
+            <div class="contacto__footer">
+                <h3>Contactanos</h3>
+                <ul class="redes__footer">
+                    <li><img src="/images/linkedln.png" alt=""></li>
+                    <li><img src="/images/twitter.png" alt=""></li>
+                    <li><img src="/images/Facebook.png" alt=""></li>
+                    <li><img src="/images/Instagram.png" alt=""></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copy__footer">
+            <a href="">Terminos y condiciones</a>
+            <p>Argentina 2022 - Derechos reservados</p>
         </div>
     </footer>
 </body>
