inicio Main, agrego ícono menú

--- a/site_ViveBio/views/productDetail.html
+++ b/site_ViveBio/views/productDetail.html
@@ -1,12 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Producto</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://kit.fontawesome.com/46efef2c4e.js" crossorigin="anonymous"></script>
+    <title>Home</title>
 </head>
-<body>
-    
+
+<body class="home">
+    <header class="header">
+        <div class="header__container">
+            <div class="header__logo">
+                <img src="/images/logo.png" alt="logo" class="logo">
+            </div>
+            <div class="header__busqueda">
+                <input type="text" class="barra">
+                <img src="/images/Lupa.png" alt="" class="barra__lupa">
+            </div>
+            <div class="header__user">
+                <a>
+                    <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
+                    <p>Usuario</p>
+                </a>
+            </div>
+        </div>
+        <nav class="header__nav">
+            <div class="header__localizacion">
+                <a href="">Estas en "lugar"</a>
+            </div>
+            <div class="header__opciones">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Productos</a></li>
+                    <li><a href="">Quienes somos</a></li>
+                    <li><a href="">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="header__iconos">
+                <a href="#"><img src="/images/configuracion.png" alt="" ></a>
+                <a href="#"><img src="/images/campana.png" alt=""></a>
+                <a href="#"><img src="/images/carrito.png" alt=""></a>
+                <a href="#"><img src="/images/corazon.png" alt=""></a>
+            </div>
+        </nav>
+        <img src="/images/menu-hamburgesa.png" alt="" class="header__menu">
+    </header>
+    <main>
+        <section>
+    <div class="main__menu">
+        <button>
+     <a href="menú"><i class="fa-solid fa-bars-sort"></i></a>
+    </button>
+    </div>
+    </section>
+    </main>
+    <footer>
+        <div class="DatFooter__home">
+            <ul class="direcciones__home">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Consejos</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+            <ul class="redes__home">
+                <li><img src="/images/linkedln.png" alt=""></li>
+                <li><img src="/images/twitter.png" alt=""></li>
+                <li><img src="/images/Facebook.png" alt=""></li>
+                <li><img src="/images/Instagram.png" alt=""></li>
+            </ul>
+        </div>
+    </footer>
 </body>
+
 </html>
