--- a/site_ViveBio/views/productDetail.html
+++ b/site_ViveBio/views/productDetail.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="https://kit.fontawesome.com/46efef2c4e.js" crossorigin="anonymous"></script>
-    <title>Home</title>
+    <title>ProductDetail</title>
 </head>
 
 <body class="home">
@@ -18,10 +18,10 @@
             </div>
             <div class="header__busqueda">
                 <input type="text" class="barra">
-                <img src="/images/Lupa.png" alt="" class="barra__lupa">
+                <a href="buscador"><img src="/images/Lupa.png" alt="" class="barra__lupa"></a>
             </div>
             <div class="header__user">
-                <a>
+                <a href="usuario">
                     <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
                     <p>Usuario</p>
                 </a>
@@ -48,15 +48,6 @@
         </nav>
         <img src="/images/menu-hamburgesa.png" alt="" class="header__menu">
     </header>
-    <main>
-        <section>
-    <div class="main__menu">
-        <button>
-     <a href="menú"><i class="fa-solid fa-bars-sort"></i></a>
-    </button>
-    </div>
-    </section>
-    </main>
     <footer>
         <div class="DatFooter__home">
             <ul class="direcciones__home">
