--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -25,7 +25,7 @@ primera parte del main
 .home main .subtitulo__home{
     margin-top: 100px;
     margin-bottom: 30px;
-    width: 75%;
+    width: 300px;
     margin: 100px auto 30px auto;
 }
 
@@ -122,7 +122,7 @@ segunda parte del main
 
 .home .sect2 .Categorias__home{
     margin-bottom: 30px;
-    width: 75%;
+    width: 200px;
     margin: 100px auto 30px auto;
 }
 
