main responsive with images without text

--- a/site_ViveBio/views/productDetail.html
+++ b/site_ViveBio/views/productDetail.html
@@ -55,7 +55,7 @@
             <section>
                 <div class="main__menu" >
                     <nav>
-                        <ul>
+                        <ul class="main__categorías">
                             <div class="main__corporal"> <li><a href="#">BioCorporal</a></li></div>
                             <div class="main__capilar"><li><a href="#">BioCapilar</a></li></div>
                             <div class="main__kit"><li><a href="#">Spa/Kit Regalos</a></li></div>
@@ -67,10 +67,12 @@
             <article>
                 <div class="main__anti">
                     <a href="#"><h1> Jabón Antiséptico </h1>
+                    <div class="main__contenedor">
                     <div class="main__img">
                     <img src="/images/jabon_antiseptico.jpg" alt=""></a>
                     </div>
-                </div>
+                    </div>
+                    </div>
             </article>
             <article>
                 <div class="main__exfo">
@@ -100,7 +102,6 @@
                 <div class="contacto__footer">
                     <h3>Contactanos</h3>
                     <ul class="redes__footer">
-                        
                         <a href="#"><li><img src="/images/linkedln.png" alt=""></li></a>
                         <a href="#"><li><img src="/images/twitter.png" alt=""></li></a>
                         <a href="#"><li><img src="/images/Facebook.png" alt=""></li></a>
