--- a/site_ViveBio/public/css/producto.css
+++ b/site_ViveBio/public/css/producto.css
@@ -18,11 +18,32 @@ main{
     margin: auto;
 
 }
+.main__img:hover {
+opacity: 0.5;
+filter: alpha(opacity=100);
+zoom: 1;
+}
 
+.main__img img{
+    width: 50%;
+    height: 40%;
+    align-items: center;
+}
+.main__categorías a:hover {
+    background-color: var(--verdeAmarillento);
+
+  }
+
+article {
+    padding-top: 20px;
+}
 
 @media (min-width: 1024px){
-    .main__menu{
+    .main__categorías{
          display: flex;
          flex-direction: row;
+         justify-content: space-around;
+         border: 1px solid white;
+         font-weight: bold;
     }
 }
