--- a/site_ViveBio/views/productDetail.html
+++ b/site_ViveBio/views/productDetail.html
@@ -67,12 +67,16 @@
             <article>
                 <div class="main__anti">
                     <a href="#"><h1> Jabón Antiséptico </h1>
-                    <div class="main__contenedor">
                     <div class="main__img">
                     <img src="/images/jabon_antiseptico.jpg" alt=""></a>
+                    <div class="main__texto">
+                    <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
+                        oleato de cedrón y caléndula, </span>Te aportan sus propiedades antibacterianas,
+                    antiinflamatorias, analgésicas, refrescantes y tonificantes!</p>
+                   </div>
                     </div>
                     </div>
-                    </div>
+                </div>
             </article>
             <article>
                 <div class="main__exfo">
@@ -80,6 +84,11 @@
                         <div class="main__img">
                             <img src="/images/jabon_exfo.jpg" alt=""></a>
                         </div>
+                        <div class="main__texto">
+                        <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
+                            oleato de cedrón y caléndula, </span>Te aportan sus propiedades antibacterianas,
+                        antiinflamatorias, analgésicas, refrescantes y tonificantes!</p>
+                       </div>
                 </div>
             </article>
             <article>
@@ -88,6 +97,11 @@
                         <div class="main__img">
                             <img src="/images/jabon_humec_marco.jpg" alt=""></a>
                         </div>
+                        <div class="main__texto">
+                        <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
+                            oleato de cedrón y caléndula, </span>Te aportan sus propiedades antibacterianas,
+                        antiinflamatorias, analgésicas, refrescantes y tonificantes!</p>
+                       </div>
                 </div>
             </article>
         </main>
