Foote&Burger Edited

--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -34,7 +34,7 @@
             <div class="header__opciones">
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="">Productos</a></li>
+                    <li><a href="/product">Productos</a></li>
                     <li><a href="">Quienes somos</a></li>
                     <li><a href="">Contacto</a></li>
                 </ul>
