--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,11 +11,9 @@
 
 <body class="home">
     <header class="header">
-
-
         <div class="header__container">
             <div class="header__logo">
-                <img src="/images/logo.png" alt="logo" class="logo">
+                <img src="/images/logo.png" alt="logo">
             </div>
             <div class="header__busqueda">
                 <input type="text" class="barra">
@@ -27,6 +26,9 @@
                 </a>
             </div>
         </div>
+        <div class="header__burger">
+            <i class="fas fa-bars"></i>
+        </div>
         <nav class="header__nav">
             <div class="header__localizacion">
                 <a href="">Estas en "lugar"</a>
@@ -34,19 +36,18 @@
             <div class="header__opciones">
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="/product">Productos</a></li>
+                    <li><a href="">Productos</a></li>
                     <li><a href="">Quienes somos</a></li>
                     <li><a href="">Contacto</a></li>
                 </ul>
             </div>
             <div class="header__iconos">
-                <a href="#"><img src="/images/configuracion.png" alt="" ></a>
+                <a href="#"><img src="/images/configuracion.png" alt=""></a>
                 <a href="#"><img src="/images/campana.png" alt=""></a>
                 <a href="#"><img src="/images/carrito.png" alt=""></a>
                 <a href="#"><img src="/images/corazon.png" alt=""></a>
             </div>
         </nav>
-        <img src="/images/menu-hamburgesa.png" alt="" class="header__menu">
     </header>
     <div class="carrusel__home">
     </div>
@@ -118,15 +119,16 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Productos</a></li>
                 <li><a href="#">Consejos</a></li>
-                <li><a href="#">Politica de devolucion</a></li>
+                <li><a href="#">Política de devolución</a></li>
             </ul>
             <div class="contacto__footer">
                 <h3>Contactanos</h3>
                 <ul class="redes__footer">
-                    <li><img src="/images/linkedln.png" alt=""></li>
-                    <li><img src="/images/twitter.png" alt=""></li>
-                    <li><img src="/images/Facebook.png" alt=""></li>
-                    <li><img src="/images/Instagram.png" alt=""></li>
+
+                    <li><a href="#"><img class="footer__img-redes" src="/images/linkedln.png" alt=""></li></a>
+                    <li><a href="#"><img class="footer__img-redes" src="/images/twitter.png" alt=""></li></a>
+                    <li><a href="#"><img class="footer__img-redes" src="/images/Facebook.png" alt=""></li></a>
+                    <li><a href="#"><img class="footer__img-redes" src="/images/Instagram.png" alt=""></li></a>
                 </ul>
             </div>
         </div>
