--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -41,7 +41,7 @@
                 </ul>
             </div>
             <div class="header__iconos">
-                <a href="#"><img src="/images/configuracion.png" alt="" ></a>
+                <a href="#"><img src="/images/configuracion.png" alt=""></a>
                 <a href="#"><img src="/images/campana.png" alt=""></a>
                 <a href="#"><img src="/images/carrito.png" alt=""></a>
                 <a href="#"><img src="/images/corazon.png" alt=""></a>
@@ -89,26 +89,50 @@
                     <a href="#">Ver mas</a>
                 </div>
             </article>
+            <article class="art__home" id="art__home4">
+                <div class="nombreart__home">
+                    <h1>producto 1</h1>
+                </div>
+                <div class="imgart__home">
+                    <img src="/images/producto1.jpeg" alt="">
+                </div>
+                <div class="verart__home">
+                    <a href="#">Ver mas</a>
+                </div>
+            </article>
             <article class="vermas__home">
                 <div class='vermas-general'>
                     <a href="#">Ver mas</a>
                 </div>
             </article>
         </section>
+        <div class='nombre-categorias__home'>
+            <h1>Categorias</h1>
+        </div>
         <section class="sect2">
-            <div class='Categorias__home'>
-                <h1>Categorias</h1>
-            </div>
-            <article>
-                <div class="Corporal__home">
+
+            <article class="categorias__home">
+                <div class="corporal__home">
+                    <img src="/images/shampoo-argán.jpg" alt="">
+                    <div>
+                        <a href="">Linea Corporal</a>
+                    </div>
                 </div>
             </article>
-            <article>
-                <div class="Capilar__home">
+            <article class="categorias__home">
+                <div class="capilar__home">
+                    <img src="/images/acondicionador-natural-de-coco-3.jpg" alt="">
+                    <div>
+                        <a href="">Linea Capilar</a>
+                    </div>
                 </div>
             </article>
-            <article>
+            <article class="categorias__home">
                 <div class="spa__home">
+                    <img src="/images/2en1almendras.jpg" alt="">
+                    <div>
+                        <a href="">Spa</a>
+                    </div>
                 </div>
             </article>
         </section>
