--- a/site_ViveBio/public/css/product.css
+++ b/site_ViveBio/public/css/product.css
@@ -26,17 +26,17 @@
         rgba(0, 0, 0, 0.3),
         rgba(0, 0, 0, 0.3)
     )
-    ,url(/images/acondicionador-argán.jpg);
+    ,url(/images/producto1.jpeg);
     background-size: cover;
 }
 
 .product main section .Detail__Categorias .Detail__Categorias-box:nth-child(2){
     background-image: linear-gradient(
         0deg,
-        rgba(0, 0, 0, 0.3),
-        rgba(0, 0, 0, 0.3)
+        rgba(255, 255, 255, 0.3),
+        rgba(255, 255, 255, 0.3)
     )
-    ,url(/images/acondicionador-argán.jpg);
+    ,url(/images/producto1.jpeg);
     background-size: cover;
 }
 
@@ -46,6 +46,6 @@
         rgba(0, 0, 0, 0.3),
         rgba(0, 0, 0, 0.3)
     )
-    ,url(/images/acondicionador-argán.jpg);
+    ,url(/images/producto1.jpeg);
     background-size: cover;
 }
